fixed error-badge z-index

--- a/webapp/commonComponents/errorBadge.scss
+++ b/webapp/commonComponents/errorBadge.scss
@@ -2,7 +2,7 @@
 
 .error-badge {
   position: absolute;
-  z-index: $zIndex30ErrorBadge;
+  z-index: $zIndex5ErrorBadge;
   background-color: $redDark;
   padding: .5rem .5rem;
   display: grid;
@@ -14,7 +14,7 @@
   &:hover {
     cursor: pointer;
     padding-bottom: 1rem;
-    z-index: $zIndex31ErrorBadgeHover;
+    z-index: $zIndex6ErrorBadgeHover;
 
     .error-badge__messages {
       display: block;
